# axe

./: Cargo.toml  README.md
.github/workflows/: on_release.yml
src/: arg_parser.rs  arg_resolver.rs  cli.rs  cmd_exe.rs  lib.rs  main.rs  stdin.rs
src/arg_parser/: arguments_resolver.rs  placeholder_resolver.rs  template_resolver.rs
src/arg_resolver/: templates_resolver.rs  tokens.rs
tests/: cli.rs
