[package]
name = "axe-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jacek Kurlit"]
keywords = ["terminal", "xargs", "linux", "system", "command"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
description = "axe - Argument execute is xargs alternative that focus on arguments processing and ordering."
repository = "https://github.com/jacek-kurlit/axe"

[[bin]]
name = "axe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
logos = "0.14"
thiserror = "1.0"
